--- a/ProjectWork.nb.html
+++ b/ProjectWork.nb.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Kimberley Maldonado, Brendan Kenny, Emily Su, Brianna Cirillo" />
 
 
 <title>Project Work</title>
@@ -1747,6 +1748,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Project Work</h1>
+<h4 class="author">Kimberley Maldonado, Brendan Kenny, Emily Su, Brianna
+Cirillo</h4>
 
 </div>
 
@@ -1754,7 +1757,7 @@ display: none;
 <!-- rnb-text-begin -->
 <!-- rnb-text-end -->
 
-<div id="rmd-source-code">LS0tCnRpdGxlOiAiUHJvamVjdCBXb3JrIgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKLS0tCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCg==</div>
+<div id="rmd-source-code">LS0tCnRpdGxlOiAiUHJvamVjdCBXb3JrIgphdXRob3I6ICJLaW1iZXJsZXkgTWFsZG9uYWRvLCBCcmVuZGFuIEtlbm55LCBFbWlseSBTdSwgQnJpYW5uYSBDaXJpbGxvIgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKLS0tCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCg==</div>
 
 
 
